# SearchEngine

./: CMakeLists.txt  CMakeSettings.json  FineTuner.py  Listnode.cpp  Map.cpp  Maxheap.cpp  Maxheap.h  NewsSummaryDataset.py  NewsSummaryDatasetModule.py  NewsSummaryModel.py  README.md  Readinput.cpp  Scorelist.cpp  Search.cpp  Search.h  Searchengine.cpp  Trienode.cpp  Trienode.h  app.py  makefile  requirements.txt  smalldataset.txt
.streamlit/: config.toml
Search-Engine/: CMakeLists.txt  Searchengine.cpp  makefile  searchengine
Search-Engine/inc/: Listnode.h  Maxheap.h  Readinput.h  Scorelist.h  Search.h  Searchengine.h  Trienode.h
Search-Engine/src/: Listnode.cpp  Map.cpp  Maxheap.cpp  Readinput.cpp  Scorelist.cpp  Search.cpp  Trienode.cpp
TextSummarizer/: FineTuner.py  NewsSummaryDataset.py  main.py  requiements.txt
TextSummarizer/Prototypes/: text-summarizer.ipynb
config/: conf.py
inc/: Listnode.h  Map.h  Readinput.h  Scorelist.h  Search.h  Searchengine.h  Trienode.h
sys/: cdefs.h  iloctl.h  ioctl.h
